force-app/main/default/objects/SPEN_CaseContact__c/SPEN_CaseContact__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between Case and Contact. Primarily created for Connections Process as to add multiple Contacts for a Case</description>
    <label>Case Contact</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Case Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>