force-app/main/default/objects/SPEN_CaseContact__c/fields/SPEN_AdditionalDeveloperEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalDeveloperEmail__c</fullName>
    <description>This field hold additional developer email for transmission</description>
    <label>Additional Developer Email</label>
    <type>Email</type>
</CustomField>