force-app/main/default/objects/SPEN_CaseContact__c/fields/SPEN_AdditionalDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdditionalDeveloperName__c</fullName>
    <description>This field hold value of name of additional developer for transmission</description>
    <label>Additional Developer Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>