force-app/main/default/objects/SPEN_CaseContact__c/fields/SPEN_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCase__c</fullName>
    <description>This field holds value of related case in M;M relationship between Case and Contact</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Contacts</relationshipLabel>
    <relationshipName>Case_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>