force-app/main/default/objects/SPEN_CaseContact__c/fields/SPEN_RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field holds value of related contact in M:M relationship of Case and Contact</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Contacts</relationshipLabel>
    <relationshipName>Case_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>