force-app/main/default/objects/SPEN_CaseContact__c/fields/SPEN_Role__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Role__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>Householder</fullName>
            </value>
            <value>
                <fullName>IDNO</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Local Authority</fullName>
            </value>
            <value>
                <fullName>Solicitor / Lawyer</fullName>
            </value>
            <value>
                <fullName>Third Party Land Owner</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Secondary Stakeholder</fullName>
            </value>
            <value>
                <fullName>Main Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>