force-app/main/default/objects/SPEN_CaseContact__c/fields/SPEN_SurveyContact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Contact</label>
    <type>Checkbox</type>
</CustomField>